test/src/e2e_vm_tests/test_programs/should_pass/language/unit_ret_use/src/main.sw
script;

#[inline(never)]
fn a(x: u64) -> () {
   log(x);
}

#[inline(never)]
fn b(x: ()) -> () {

}

fn main() -> u64 {
   let x = a(1);
   b(x);
   2
}