test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u16_mul_overflow/src/main.sw
script;

fn main() -> bool {
    let a: u16 = u16::max();
    let b: u16 = 2;

    let result: u16 = a * b;
    log(result);

    true
}
